--- a/developer-docs-site/package.json
+++ b/developer-docs-site/package.json
@@ -23,15 +23,21 @@
     "@docusaurus/plugin-google-gtag": "2.1.0",
     "@docusaurus/preset-classic": "2.1.0",
     "@mdx-js/react": "1.6.22",
+    "@stoplight/elements": "^7.7.3",
+    "buffer": "^6.0.3",
     "clsx": "1.2.1",
     "hast-util-is-element": "1.1.0",
+    "path-to-regex": "^1.3.8",
     "prism-react-renderer": "1.2.1",
+    "process": "^0.11.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "rehype-katex": "5",
     "remark-math": "3",
+    "stream": "^0.0.2",
     "unist-util-visit": "4.1.0",
-    "unist-util-visit-children": "2.0.0"
+    "unist-util-visit-children": "2.0.0",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.1.0",
