--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4",
     "zx": "^7.1.1"
+  },
+  "dependencies": {
+    "path-to-regex": "^1.3.8"
   }
 }
